--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
-<head>
-<script type="module" src="script.js"></script>
-</head>
+<body>
+  <h1>📜 Quadro de Missões</h1>
+  <div id="missions"></div>
+  <script type="module" src="script.js"></script>
+</body>
