--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>Guilda de Missões</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
   <h1>📜 Quadro de Missões</h1>
+
   <div id="missions"></div>
+
   <script type="module" src="script.js"></script>
 </body>
+</html>
