--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <div id="missions"></div>
 
+  <script src="script.js"></script>
   <script type="module" src="script.js"></script>
 </body>
 </html>
