--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
   <meta charset="UTF-8">
   <title>Guilda de Missões</title>
   <link rel="stylesheet" href="style.css">
+  <script type="module" src="script.js"></script>
 </head>
 <body>
   <h1>📜 Quadro de Missões</h1>
 
-  <div id="missions"></div>
+<!-- Formulário para criar nova missão -->
+<div id="new-mission-form">
+  <input type="text" id="mission-title" placeholder="Título da missão">
+  <input type="number" id="level-min" placeholder="Nível mínimo">
+  <input type="number" id="level-max" placeholder="Nível máximo">
+  <button id="add-mission">Adicionar Missão</button>
+</div>
 
-  <script src="script.js"></script>
-  <script type="module" src="script.js"></script>
+<div id="missions"></div>
+
 </body>
 </html>
