--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Guilda de Missões</title>
   <link rel="stylesheet" href="style.css">
-  <script type="module" src="script.js"></script>
 </head>
 <body>
   <h1>📜 Quadro de Missões</h1>
@@ -18,6 +17,8 @@
 </div>
 
 <div id="missions"></div>
-
+  
+<!-- Script -->
+<script type="module" src="script.js"></script>
 </body>
 </html>
