--- a/index.html
+++ b/index.html
@@ -20,10 +20,18 @@
   <!-- ========================= -->
   <div id="auth-container">
     <input type="text" id="auth-name" placeholder="Nome de aventureiro">
+
     <input type="email" id="auth-email" placeholder="E-mail">
+
     <input type="password" id="auth-password" placeholder="Senha">
-    <button id="register-btn">Criar Conta</button>
-    <button id="login-btn">Entrar</button>
+
+    <button type="button" id="register-btn">
+      Criar Conta
+    </button>
+
+    <button type="button" id="login-btn">
+      Entrar
+    </button>
   </div>
 
   <!-- ========================= -->
@@ -32,12 +40,16 @@
   <div id="app-container" style="display: none;">
 
     <p id="welcome-user"></p>
-    <button id="logout-btn">Sair</button>
+
+    <button type="button" id="logout-btn">
+      Sair
+    </button>
 
     <!-- ========================= -->
     <!-- NOVA MISSÃO -->
     <!-- ========================= -->
     <div id="new-mission-form">
+
       <input type="text" id="mission-title" placeholder="Título da missão" required>
 
       <input type="number" id="level-min" placeholder="Nível mínimo" required>
@@ -63,7 +75,10 @@
       <input type="number" id="min-players" placeholder="Mínimo de participantes" required>
       <input type="number" id="max-players" placeholder="Máximo de participantes" required>
 
-      <button id="add-mission">Adicionar Missão</button>
+      <button type="button" id="add-mission">
+        Adicionar Missão
+      </button>
+
     </div>
 
     <!-- ========================= -->
@@ -76,4 +91,4 @@
   </div>
 
 </body>
-</html>
+<
